--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\Scripts\PhaseManager.cs" />
      <Compile Include="Assets\Scripts\WarningVolume.cs" />
      <Compile Include="Assets\Scripts\MissileSpawner.cs" />
+     <Compile Include="Assets\Scripts\DisplayHealth.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
